syntax = "proto3";
package auth.v1;
option go_package="channelwill_go_basics/proto/auth/v1;authpb";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
}


message LoginRequest {
    string user_name = 1;
    string passwd = 2;
}

message LoginResponse {
    int32 uid = 1;
    string user_token = 2;
}